# ClickBuzz

./: .gitignore  README.md  pyproject.toml
.data/: version.json
.data/data_nodes/: DATANODE_input_titles_6deafb74-70a5-49cb-94f3-b7d8327d6a8d.json  DATANODE_message_2a7ecc24-93df-42d9-8a7a-ae7376a8bb12.json
.data/scenarios/: SCENARIO_scenario_05f04804-adb1-4173-a89c-4432a1849ebc.json
.data/tasks/: TASK_build_msg_97a562e0-24ee-4744-b828-084bca6dbb43.json
.data/version/: ed34c838-f35e-4599-8645-c911e42d7cb9.json
clickbuzz/: main.css  main.py  scraper_youtube.ipynb
data/: data_out200.csv  notebook.ipynb
