[tool.poetry]
name = "clickbuzz"
version = "0.1.0"
description = ""
authors = ["B-Ricey763 <39998963+B-Ricey763@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
taipy = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
